--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -52,6 +52,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TCL.Extensions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TCL.Extensions.1.3.35\lib\net45\TCL.Extensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="websocket-sharp, Version=1.0.2.19104, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
       <HintPath>..\packages\MargieBot.1.1.4.1\lib\net45\websocket-sharp.dll</HintPath>
       <Private>True</Private>
