--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -68,11 +68,14 @@
   <ItemGroup>
     <Compile Include="ChatMessageInfo.cs" />
     <Compile Include="ChatScraper.cs" />
+    <Compile Include="DataFormatters\BaseDataFormatter.cs" />
+    <Compile Include="DataFormatters\FullTableDataFormatter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responders\StatsReponder.cs" />
     <Compile Include="SettingsAccessor.cs" />
     <Compile Include="TableParser.cs" />
+    <Compile Include="UserDayStats.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
