adding data formatter for cv-pls

--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ChatMessageInfo.cs" />
     <Compile Include="ChatScraper.cs" />
     <Compile Include="DataFormatters\BaseDataFormatter.cs" />
+    <Compile Include="DataFormatters\CvPlsDataFormatter.cs" />
     <Compile Include="DataFormatters\FullTableDataFormatter.cs" />
     <Compile Include="DataFormatters\StarsDataFormatter.cs" />
     <Compile Include="DataFormatters\TotalsDataFormatter.cs" />
