--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -71,6 +71,8 @@
     <Compile Include="DataFormatters\BaseDataFormatter.cs" />
     <Compile Include="DataFormatters\CvPlsDataFormatter.cs" />
     <Compile Include="DataFormatters\FullTableDataFormatter.cs" />
+    <Compile Include="DataFormatters\LinksDataFormatter.cs" />
+    <Compile Include="DataFormatters\OneBoxeDataFormatter.cs" />
     <Compile Include="DataFormatters\StarsDataFormatter.cs" />
     <Compile Include="DataFormatters\TotalsDataFormatter.cs" />
     <Compile Include="Program.cs" />
