--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DataFormatters\TotalsDataFormatter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responders\HelpResponder.cs" />
     <Compile Include="Responders\StatsReponder.cs" />
     <Compile Include="SettingsAccessor.cs" />
     <Compile Include="TableParser.cs" />
