--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -87,6 +87,8 @@
     <Compile Include="DataFormatters\TotalsDataFormatter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responders\DateRangeStatsResponder.cs" />
+    <Compile Include="Responders\DayStatsResponder.cs" />
     <Compile Include="Responders\HelpResponder.cs" />
     <Compile Include="Responders\StatsReponder.cs" />
     <Compile Include="SettingsAccessor.cs" />
