--- a/source/SOCVR.Slack.StatBot/packages.config
+++ b/source/SOCVR.Slack.StatBot/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Bazam" version="2.6.2.0" targetFramework="net46" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="EntityFramework.Commands" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework7.Npgsql" version="3.1.0-rc1-3" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
   <package id="MargieBot" version="1.1.4.1" targetFramework="net46" />
