--- a/source/SOCVR.Slack.StatBot/packages.config
+++ b/source/SOCVR.Slack.StatBot/packages.config
@@ -4,6 +4,7 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="EntityFramework.Commands" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.InMemory" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework7.Npgsql" version="3.1.0-rc1-3" targetFramework="net451" />
