--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -185,6 +185,11 @@
     <Compile Include="DataFormatters\OneBoxeDataFormatter.cs" />
     <Compile Include="DataFormatters\StarsDataFormatter.cs" />
     <Compile Include="DataFormatters\TotalsDataFormatter.cs" />
+    <Compile Include="Migrations\20160123030220_InitialMigration.cs" />
+    <Compile Include="Migrations\20160123030220_InitialMigration.designer.cs">
+      <DependentUpon>20160123030220_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\MessageStorageModelSnapshot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responders\DateRangeStatsResponder.cs" />
