--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -204,8 +204,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsAccessor.cs" />
     <Compile Include="Spider\Parsing\ChatScraper.cs" />
+    <Compile Include="Spider\Parsing\ParsedMessageData.cs" />
     <Compile Include="Spider\Parsing\Url\RateLimitedUrl.cs" />
+    <Compile Include="Spider\Parsing\Url\StackOverflowChatMessageHistoryUrl.cs" />
     <Compile Include="Spider\Parsing\Url\StackOverflowChatProfileUrl.cs" />
+    <Compile Include="Spider\Parsing\Url\StackOverflowChatRoomInfoUrl.cs" />
     <Compile Include="Spider\Parsing\Url\StackOverflowChatTranscriptUrl.cs" />
     <Compile Include="Spider\Parsing\Url\StackOverflowChatUrl.cs" />
     <Compile Include="Spider\Parsing\Url\StackOverflowUrl.cs" />
@@ -215,6 +218,7 @@
     <None Include="App.config" />
     <None Include="Database\ModelClassesDiagram.cd" />
     <None Include="packages.config" />
+    <None Include="Spider\Parsing\Url\Diagram.cd" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
