--- a/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
+++ b/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.2.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.2.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -54,12 +58,32 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DownloadedPages\RegisteryAccessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spider\Download\PreDownloadedHtmlDownloader.cs" />
     <Compile Include="Spider\Parsing\ChatScraperTests.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="DownloadedPages\MessageHistory\29310752.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="app.config" />
+    <Content Include="DownloadedPages\registery.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SOCVR.Slack.StatBot\SOCVR.Slack.StatBot.csproj">
+      <Project>{68065215-d199-4208-86ce-e49d56a82034}</Project>
+      <Name>SOCVR.Slack.StatBot</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DownloadedPages\MessageHistory\29290954.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
