adding 2 test files for pinned values

--- a/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
+++ b/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
@@ -75,6 +75,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="app.config" />
+    <Content Include="DownloadedPages\MessageHistory\29333825.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DownloadedPages\MessageHistory\29333849.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="DownloadedPages\registery.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
