--- a/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
+++ b/source/SOCVR.Slack.StatBot.Tests/SOCVR.Slack.StatBot.Tests.csproj
@@ -65,6 +65,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="DownloadedPages\MessageHistory\21978883.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DownloadedPages\MessageHistory\27862166.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="DownloadedPages\MessageHistory\29271581.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
