change over to sql server and fix the db model

--- a/source/SOCVR.Slack.StatBot/packages.config
+++ b/source/SOCVR.Slack.StatBot/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework.Commands" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.InMemory" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.MicrosoftSqlServer" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="EntityFramework7.Npgsql" version="3.1.0-rc1-3" targetFramework="net451" />
