--- a/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
+++ b/source/SOCVR.Slack.StatBot/SOCVR.Slack.StatBot.csproj
@@ -64,6 +64,10 @@
       <HintPath>..\packages\EntityFramework.InMemory.7.0.0-rc1-final\lib\net451\EntityFramework.InMemory.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework.MicrosoftSqlServer, Version=7.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.MicrosoftSqlServer.7.0.0-rc1-final\lib\net451\EntityFramework.MicrosoftSqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework.Relational, Version=7.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.Relational.7.0.0-rc1-final\lib\net451\EntityFramework.Relational.dll</HintPath>
       <Private>True</Private>
@@ -191,9 +195,9 @@
     <Compile Include="Frontend\Responders\DayStatsResponder.cs" />
     <Compile Include="Frontend\Responders\HelpResponder.cs" />
     <Compile Include="Frontend\UserDayStats.cs" />
-    <Compile Include="Migrations\20160313213239_InitialMigrations.cs" />
-    <Compile Include="Migrations\20160313213239_InitialMigrations.designer.cs">
-      <DependentUpon>20160313213239_InitialMigrations.cs</DependentUpon>
+    <Compile Include="Migrations\20160328150618_InitialMigration.cs" />
+    <Compile Include="Migrations\20160328150618_InitialMigration.designer.cs">
+      <DependentUpon>20160328150618_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\MessageStorageModelSnapshot.cs" />
     <Compile Include="Program.cs" />
